# tap-cqc-org-uk

./: .gitignore  Developer_Notes.md  README.md  config_example.json  meltano.yml  pyproject.toml  tap-cqc-org-uk.sh  tox.ini
tap_cqc_org_uk/: __main__.py  client.py  streams.py  tap.py
tap_cqc_org_uk/schemas/: CQC_Locations.json  CQC_Providers.json  Providers.json  updatedProviders.json
tap_cqc_org_uk/tests/: __init__.py  test_core.py
